* Support bypassing redirectUri validation also on macOS
* Indicate whether SSO extension account is available for device wide SSO (#825)
* Add swift static lib target to support AES GCM.
* Append 'PkeyAuth/1.0' keyword to the User Agent String to reliably advertise PkeyAuth capability to ADFS
* Update Identity Core within WPJ to the latest dev branch

Version 1.5.5
* Fix unused parameter errors for macOS target. (#816)
* Move openBroswerResponse handling into its operation for CPP integration (#817)
* Cleanup noisy SSO extension logs (#812)
* Mark RSA public key as extractable (#813)
* Cleanup main product targets from test files (#811)
* Fix a test bug where the MacKeychainTokenCache could fail to initialize (#799)
* Save last request telemetry to disk (#768)
* Fix an incorrectly-cased filename (#808)
* Save PRT expiry interval in cache to calculate PRT refresh interval more reliably (#804)
* Move broker redirectUri validation logic into common core from MSAL (#807)
* Refactor crypto code for cpp integration and add api to generate ephemeral asymmetric key pair (#803)
* Add operation factory for broker installation integration with other framework (#779)
* Add logger connector which allows to override logger behaviour. (#796)
* Include redirect uri in body when redeeming refresh token at token endpoint (#815)

Version 1.5.4
-----
* Support for proof of posession for access tokens (#738)
* Allow brokered authentication for /consumers authority (#774)
* Account metadata cleanup on account removal (#791)
* Fix an issue with guest accounts when UPN mismatches across tenants (#797)
* Symmetric key support for creating a verify signature and key derivation (#805)

Version 1.5.3
-----
* Switch to PkeyAuth on macOS (#734)
* Support returning additional WPJ info (#742)
* Fixed PkeyAuth when ADFS challenge is URL encoded (#750)
* Fixed CBA handling in MSAL (#751)
* Fixed failing unit tests on 10.15 (#760)

Version 1.5.2
------