@@ -26,8 +26,13 @@
 NS_ASSUME_NONNULL_BEGIN
 
 @interface MSIDBaseBrokerOperationRequest : NSObject
+{
+@protected
+    NSUUID *_correlationId;
+}
 
 @property (nonatomic, class, readonly) NSString *operation;
+@property (nonatomic) NSUUID *correlationId;
 
 - (nullable NSString *)logInfo;
 
