@@ -35,7 +35,6 @@ NS_ASSUME_NONNULL_BEGIN
 @property (nonatomic, readonly) NSString *bundleIdentifier;
 @property (nonatomic, readonly) MSIDAADAuthority *authority;
 @property (nonatomic, readonly) NSDictionary *headers;
-@property (nonatomic, readonly) NSUUID *correlationId;
 @property (nonatomic, readonly) NSData *httpBody;
 
 - (instancetype)initWithRequest:(NSURL *)requestURL
